[package]
name = "nect-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pure Rust Kinect driver logic over libusb"

[dependencies]
rusb = "0.9"
libusb1-sys = "0.7"
libc = "0.2"

[dev-dependencies]
minifb = "0.27"

[[example]]
name = "kinect-info"
path = "examples/kinect-info.rs"

[[example]]
name = "kinect-depth"
path = "examples/kinect-depth.rs"

[[example]]
name = "kinect-video"
path = "examples/kinect-video.rs"

[[example]]
name = "kinect-viewer"
path = "examples/kinect-viewer.rs"

[[example]]
name = "kinect-smoke"
path = "examples/kinect-smoke.rs"
